ucslint (8.0.0-19) unstable; urgency=low

  * Bug #49240: Allow ucslint on multiple packages
  * Bug #51612: Check for common shell issues
  * Bug #33737: Check for well-known SIDs.

 -- Philipp Hahn <hahn@univention.de>  Wed, 24 Jun 2020 11:27:38 +0200

ucslint (8.0.0-18) unstable; urgency=low

  * Bug #51107: Always check conffiles with Python 2 and 3

 -- Philipp Hahn <hahn@univention.de>  Wed, 24 Jun 2020 10:18:47 +0200

ucslint (8.0.0-17) unstable; urgency=low

  * Bug #51375: Check for uldap.searchDn()
  * Bug #51476: Check for Essential:yes and
    Priority:required/important/standard packages
  * Bug #50056: Check for custom_{user,group}name()
  * Bug #51106: Check for debian/*.pyinstall usage

 -- Philipp Hahn <hahn@univention.de>  Sat, 20 Jun 2020 17:34:21 +0200

ucslint (8.0.0-16) unstable; urgency=low

  * Bug #51248: Check debian/compat

 -- Philipp Hahn <hahn@univention.de>  Thu, 28 May 2020 18:21:42 +0200

ucslint (8.0.0-15) unstable; urgency=low

  * Bug #49704: Convert to Python 3

 -- Philipp Hahn <hahn@univention.de>  Mon, 25 May 2020 12:16:20 +0200

ucslint (8.0.0-14) unstable; urgency=medium

  * Bug #49704: Convert to Python 3
  * Bug #51105: Check invalid Python string literals
  * Bug #51248: Check debian/compat
  * Bug #51247: Check debian/*.dirs
  * Bug #51246: Ignore more DH files
  * Bug #49683: Check debian/*.ucs files
  * Bug #49620: Check debian/changelog is strict-monotonical
  * Bug #48747: Check .uinst files
  * Bug #43981: Check Debian maintainer script actions
  * Bug #42294: Run from CI pipeline

 -- Philipp Hahn <hahn@univention.de>  Wed, 20 May 2020 12:55:10 +0200

ucslint (8.0.0-13) unstable; urgency=low

  * Bug #42480: Speed-up spelling detection
  * Bug #49520: Fix ucslint.overrides application

 -- Philipp Hahn <hahn@univention.de>  Tue, 21 May 2019 12:33:51 +0200

ucslint (8.0.0-12) unstable; urgency=low

  * Bug #28497: Fix migration to dh-python

 -- Philipp Hahn <hahn@univention.de>  Tue, 21 May 2019 08:37:44 +0200
