@@ -1,0 +1,2 @@
+#!/usr/bin/python3
+exit(0)
