@@ -1,0 +1,2 @@
+#!/usr/bin/python3.5
+exit(1)
