@@ -1,0 +1,2 @@
+#!/usr/bin/python3.7
+exit(1)
